fix log not displaying on mobile

--- a/web/style.css
+++ b/web/style.css
@@ -510,6 +510,10 @@ body {
 }
 
 @media only screen and (orientation: portrait) and (max-width: 750px) {
+  .status {
+    font-size: 0.8em;
+  }
+  
   .status > ul {
     margin: 0;
   }
@@ -517,10 +521,15 @@ body {
   .hud_menu_overlay {
     display: grid;
     grid-template-rows: auto 1em;
+    font-size: 0.8em;
   }
 
   .status > ul > li {
     padding: 20px;
+  }
+
+  .status > span > ul > li {
+    padding: 3vh;
   }
 
   .hud_menu_overlay > div > ul > li {
@@ -578,6 +587,7 @@ body {
   .cardbox-status-container {
     display: grid;
     grid-template-rows: 2em auto;
+    grid-gap: 0.5em;
     /* height: 75%; */
   }
 
@@ -585,6 +595,15 @@ body {
     width: calc(31vh * 0.7211);
     min-width: calc(30vh * 0.7211);
     margin-right: 0.75em;
+  }
+
+  #sizer {
+    padding: 20px 15px;
+  }
+
+  .hud-header li {
+    width: 20%;
+    font-size: 0.8em;
   }
 }
 
@@ -604,6 +623,10 @@ body {
 
   .status > ul > li {
     padding: 20px;
+  }
+
+  .status > span > ul > li {
+    padding: 3vh;
   }
 
   .hud_menu_overlay > div > ul > li {
